# ahu-simulator

./: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.bat  setup.ps1  start.bat
.omx/: metrics.json
config/: README.md  defaults.mobile.yaml  defaults.yaml  local.env.example
data/: README.md
deploy/: Dockerfile  README.md  ahu-simulator-desktop.spec  bootstrap-mobile.ps1  bootstrap-python.ps1  build-3d-blender.ps1  build-demo-package.ps1  build-windows-exe.ps1  build-windows-installer.ps1  docker-compose.yml  release-clean-install-checklist.md  resolve-release-version.ps1  run-desktop.ps1  run-local.ps1  run-mobile-backend.ps1  windows-exe-smoke-checklist.md
docs/: 01_stack.md  02_functionality.md  03_architecture.md  04_roadmap.md  05_execution_phases.md  06_todo.md  07_backlog.md  08_risks_and_assumptions.md  09_project_structure.md  10_sources.md  11_open_questions.md  12_validation_matrix.md  13_visualization_strategy.md  14_defense_pack.md  15_demo_readiness.md  16_demo_package.md  17_scenario_archive.md  18_export_pack.md  19_p0_baseline.md  20_post_mvp.md  21_m10_m14_implementation_plan.md  22_run_comparison.md  23_status_layer.md  24_windows_android_delivery_plan.md  25_windows_run_guide.md  26_hybrid_feature_technical_core_migration.md  27_m10_m14_completion_plans.md  28_defense_freeze_note.md  29_defense_handoff.md  30_defense_presenter_script.md  31_defense_qna.md  32_defense_seal_note.md  33_defense_day_checklist.md  34_morning_of_defense.md  35_3d_visualization_upgrade_plan.md  36_3d_visualization_course_map.md  (+3 more)
(+1065 files in other folders)
