[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvu-diploma-project"
version = "0.1.0"
description = "Interactive PVU simulation for diploma work"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2wsgi>=1.10,<2.0",
    "dash>=3.2,<4.0",
    "fastapi>=0.128,<1.0",
    "numpy>=2.3,<3.0",
    "plotly>=6.3,<7.0",
    "pydantic>=2.12,<3.0",
    "PyYAML>=6.0,<7.0",
    "reportlab>=4.2,<5.0",
    "uvicorn>=0.37,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pyinstaller>=6.16,<7.0",
    "pytest>=8.4,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
